Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50470

Universal Style: ComboBox and ListView don't use user defined accent color

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Beta
    • Quick: Controls 2
    • None
    • Windows 8
    • 07e0dec2b92eea069021b6efcb984dbacba9b48e

      See attached code (in qml.zip) which works for Menu component, but not for ComboBox or ListView. At least for ListView, I found a workaround.

        1. qml_conffile.zip
          2 kB
        2. qml.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            kmichel K. Michel
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes