Fix style inheritance

Change-Id: I46f4ea38d21f0f6a22bd247e02fe92a5b0d0d454
Task-number: QTBUG-50470
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>